[package]
name = "littlefs2-sys"
description = "Low-level bindings to littlefs"
version = "0.2.0"
authors = ["Nicolas Stalder <n@stalder.io>", "The Trussed Developers"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["embedded", "filesystem", "no-std"]
repository = "https://github.com/nickray/littlefs2-sys"

[build-dependencies]
bindgen = { version = "0.69.4", default-features = false , features = ["runtime"] }
cc = "1"

[features]
assertions = []
trace = []
malloc = []
software-intrinsics = []
